Update of files to ignore for git

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 
 # Maven
 target
+release.properties
+pom.xml.releaseBackup
+pom.xml.tag
+pom.xml.next
 
 # Jahia DX Studio
 repository.xml.generated
+
