--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <properties>
         <jahia-depends>default</jahia-depends>
         <jahia-module-type>system</jahia-module-type>
+        <import-package>jdk.internal.ref</import-package>
     </properties>
 
     <repositories>
